@@ -923,6 +923,19 @@ def save_gmf_data(dstore, sitecol, gmfs, imts, eids=()):
         dstore['events'] = events
 
 
+def get_idxs(data, eid2idx):
+    """
+    Convert from event IDs to event indices.
+
+    :param data: an array with a field eid
+    :param eid2idx: a dictionary eid -> idx
+    :returns: the array of event indices
+    """
+    uniq, inv = numpy.unique(data['eid'], return_inverse=True)
+    idxs = numpy.array([eid2idx[eid] for eid in uniq])[inv]
+    return idxs
+
+
 def import_gmfs(dstore, fname, sids):
     """
     Import in the datastore a ground motion field CSV file.
@@ -941,7 +954,9 @@ def import_gmfs(dstore, fname, sids):
     # store the events
     eids = numpy.unique(array['eid'])
     eids.sort()
-    events = numpy.zeros(len(eids), rupture.events_dt)
+    E = len(eids)
+    eid2idx = dict(zip(eids, range(E)))
+    events = numpy.zeros(E, rupture.events_dt)
     events['eid'] = eids
     dstore['events'] = events
     # store the GMFs
@@ -953,7 +968,10 @@ def import_gmfs(dstore, fname, sids):
         lst.append((offset, offset + n))
         if n:
             offset += n
-            dstore.extend('gmf_data/data', dic[sid])
+            gmvs = dic[sid]
+            gmvs['eid'] = get_idxs(gmvs, eid2idx)
+            gmvs['rlzi'] = 0   # effectively there is only 1 realization
+            dstore.extend('gmf_data/data', gmvs)
     dstore['gmf_data/indices'] = numpy.array(lst, U32)
     dstore['gmf_data/imts'] = ' '.join(imts)
 
